<resources>
    <string name="alpha_create_wallet">Write these words down and keep them safe. Do not lose these words or forget your passphrase.</string>
    <string name="alpha_create_confirm_backup">I\'ve written down my words</string>
    <string name="creating_wallet">Creating wallet. Please wait…</string>
    <string name="restoring_wallet">Restoring wallet. Please wait…</string>
    <string name="decrypting_bip38">Decrypting BIP38 password. Please wait…</string>
    <string name="action_settings">Settings</string>
    <string name="action_support">Support</string>
    <string name="action_sweep">Sweep private key</string>
    <string name="action_bip47">PayNyms</string>
    <string name="action_unarchive">Activate all archived payment codes</string>
    <string name="action_sync_all">Sync all payment codes</string>
    <string name="action_whirlpool">Whirlpool</string>
    <string name="about_us">About Ashigaru</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="check_passphrase_independentyly">Check BIP39 Passphrase independently</string>
    <string name="options_cat_prefs">Block explorer</string>
    <string name="options_cat_stealth">Stealth</string>
    <string name="options_cat_remote">Remote</string>
    <string name="options_cat_wallet">Wallet</string>
    <string name="options_cat_networking">Networking</string>
    <string name="options_cat_other">About</string>
    <string name="options_mnemonic">Show mnemonic</string>
    <string name="options_mnemonic2">Show 12-word seed for this wallet.</string>
    <string name="options_xpub">Show BIP44 XPUB</string>
    <string name="options_xpub2">Show extended public key for BIP44 account.</string>
    <string name="options_xpub49">Show Segwit YPUB</string>
    <string name="options_xpub49_2">Show extended public key for BIP49 Segwit account (P2SH-wrapped).</string>
    <string name="options_xpub84">Show Segwit ZPUB</string>
    <string name="options_xpub84_2">Show extended public key for BIP84 Segwit account (Bech32).</string>
    <string name="options_xpub84_premix">Show Whirlpool pre-mix ZPUB</string>
    <string name="options_xpub84_premix2">Show extended public key for BIP84 Segwit account (Bech32) Whirlpool pre-mix.</string>
    <string name="options_xpub84_postmix">Show Whirlpool post-mix ZPUB</string>
    <string name="options_xpub84_postmix2">Show extended public key for BIP84 Segwit account (Bech32) Whirlpool post-mix.</string>
    <string name="options_xpub44_postmix">Show Whirlpool post-mix change XPUB</string>
    <string name="options_xpub44_postmix2">Show extended public key for BIP44 Whirlpool post-mix change account.</string>
    <string name="options_xpub49_postmix">Show Whirlpool post-mix change YPUB</string>
    <string name="options_xpub49_postmix2">Show extended public key for BIP49 Segwit account (P2SH-wrapped) Whirlpool post-mix change account.</string>
    <string name="options_xpub84_badbank">Show Whirlpool bad bank ZPUB</string>
    <string name="options_xpub84_badbank2">Show extended public key for BIP84 Segwit account (Bech32) Whirlpool bad bank.</string>
    <string name="options_xpub84_swapsmain">Show Swaps main account ZPUB</string>
    <string name="options_xpub84_swapsmain2">Show extended public key for BIP84 Segwit account (Bech32) XMR-BTC Swaps main account.</string>
    <string name="options_xpub84_swapsrefund">Show Swaps refund account ZPUB</string>
    <string name="options_xpub84_swapsrefund2">Show extended public key for BIP84 Segwit account (Bech32) XMR-BTC Swaps refund account.</string>
    <string name="options_xpub84_swapsasbmain">Show Swaps ASB main account ZPUB</string>
    <string name="options_xpub84_swapsasbmain2">Show extended public key for BIP84 Segwit account (Bech32) XMR-BTC Swaps ASB main account.</string>
    <string name="options_wipe">Secure erase wallet</string>
    <string name="options_wipe2">Delete all associated wallet data from device\n(excluding encrypted wallet backup file)</string>
    <string name="options_stealth_display">Stealth launcher</string>
    <string name="options_stealth_display2">Remove Samourai from the launcher and home screen. You must dial **YOUR_PIN_CODE# from the phone dialer to launch Samourai.</string>
    <string name="options_remote_commands">Enable remote commands</string>
    <string name="options_remote_commands2">Allow remote commands via SMS.</string>
    <string name="options_blockexplorer">Block explorer</string>
    <string name="options_blockexplorer2">The block explorer used to view transaction details.</string>
    <string name="options_sim_switch">SIM switch defense</string>
    <string name="options_sim_switch2">Send SMS to a trusted mobile number when the SIM card is changed.</string>
    <string name="options_use_telno">Use trusted mobile number for remote</string>
    <string name="options_use_telno2">Only allow remote commands sent from your trusted mobile phone number.</string>
    <string name="options_alert_telno">Trusted number</string>
    <string name="options_alert_telno2">A trusted mobile number that you can restrict remote access to (use int\'l format without spaces ex.: +447385555555).</string>
    <string name="options_export">Export wallet backup</string>
    <string name="options_export2">Copy or share a snapshot of your encrypted wallet backup</string>
    <string name="options_haptic_feedback">Haptic feedback</string>
    <string name="options_haptic_feedback2">Vibrate device when pin digit is tapped</string>
    <string name="options_change_pin">Change PIN</string>
    <string name="options_pin_entry">PIN entry</string>
    <string name="show_mnemonic">Show mnemonic</string>
    <string name="show_mnemonic2">Display the secret words for this wallet</string>
    <string name="check_bip39">Check BIP39 Passphrase</string>
    <string name="check_bip392">Verify wallet recovery access by entering\nand testing your BIP39 Passphrase</string>
    <string name="view_extended_pubkeys">View extended public keys</string>
    <string name="view_extended_pubkeys2">Display the wallet\'s associated x/y/zPUBs</string>
    <string name="copy_or_share_wallet_info">Wallet info for troubleshooting</string>
    <string name="copy_or_share_wallet_info2">JSON dump containing information about your wallet. Contains; wallet\'s extended public keys, PayNym connections, Dojo connection, etc. Does not contain private keys</string>
    <string name="show_logs">Show logs</string>
    <string name="show_logs2">Display wallet error logs for troubleshooting</string>
    <string name="options_pin_entry2">Change and customize PIN for unlocking app</string>
    <string name="options_change_pin2">Define a new PIN to unlock app</string>
    <string name="options_remote_pin">Stealth launch and remote PIN</string>
    <string name="options_remote_pin2">Define alternative PIN for stealth launch and remote functions.</string>
    <string name="options_autosave_backup">Autosave backup to device storage</string>
    <string name="options_autosave_backup2">Periodically save passphrase encrypted backup to device storage.</string>
    <string name="options_version">App version</string>
    <string name="options_txs">Transactions</string>
    <string name="options_security">Security</string>
    <string name="options_boltzmann">STONEWALL spend</string>
    <string name="options_boltzmann_2">Spends will use STONEWALL algorithm for increased obfuscation.</string>
    <string name="options_utxo">Show unspent outputs</string>
    <string name="options_rbf0">Spend using RBF</string>
    <string name="options_rbf0_2">Turn ON to allow boosting a transaction miner fee after a transaction has already been broadcasted to the Bitcoin network. Toggle must first be ON prior to broadcasting transaction to be able to use RBF functionality</string>
    <string name="options_troubleshoot">Troubleshoot</string>
    <string name="options_backups">Backups</string>
    <string name="options_passphrase_test">Passphrase/backup test</string>
    <string name="options_passphrase_test2">Verify wallet access and backup support.</string>
    <string name="options_send_backup_to_support">Copy/share wallet info for troubleshooting</string>
    <string name="options_send_backup_to_support2">JSON dump containing information about your wallet. Contains public keys. Does not contain private keys</string>
    <string name="options_fee_provider">Fee Estimation Source</string>
    <string name="options_fee_provider2">Select your preferred transaction fee estimation provider.</string>
    <string name="broadcast_transactions">Broadcast transaction</string>
    <string name="sign_transactions">Sign transaction</string>
    <string name="options_broadcast_on2">Turning OFF prevents transactions being broadcast to the Bitcoin network, and a signed transaction HEX can instead be copied to clipboard for broadcasting elsewhere or at a later time</string>
    <string name="test_wallet_file">Test encrypted wallet backup file</string>
    <string name="test_wallet_file2">Verify the encrypted backup file\'s integrity and availability</string>
    <string name="autosave_file">Autosave backup to device storage</string>
    <string name="autosave_file2">Encrypted wallet backup file updated and saved upon app exit, encrypted by BIP39 Passphrase</string>
    <string name="export_file2">Copy to clipboard or share a snapshot of your encrypted wallet backup file</string>
    <string name="export_file">Export encrypted wallet backup file</string>
    <string name="options_strictoutputs">Strict mode</string>
    <string name="options_strictoutputs2">Prevent broadcast and display alert if internal wallet address reuse if detected when attempting to send a transaction</string>
    <string name="options_segwit">Receive to segwit addresses</string>
    <string name="options_like_typed_change">Receive change to like-typed outputs</string>
    <string name="options_like_typed_change2">Default to receiving transaction change to the same type of address as the spend output. Turn OFF to receive only to Native Segwit addresses starting \"bc1q\"</string>
    <string name="options_prune">Prune encrypted wallet backup file</string>
    <string name="options_prune2">Remove stale data from encrypted wallet backup file</string>
    <string name="yes">Yes</string>
    <string name="sure_to_erase">Are you sure you want to erase all wallet data?</string>
    <string name="sure_to_prune">Are you sure you want to remove stale data from\nyour encrypted wallet backup file?</string>
    <string name="this_will_not_erase_the_encrypted">Note: this will not erase the encrypted wallet backup\nfile saved in your device\'s storage</string>
    <string name="encrypted_wallet_location">Encrypted wallet backup file location:</string>
    <string name="share_file_troubleshooting_note">Note: while private keys are not contained within\nthis file, it does contain sensitive information\npertaining to your wallet. If shared with a third-party\nyour privacy could be degraded</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="stealth_mode">Stealth mode</string>
    <string name="enable_stealth_mode_to_protect">Disguise app icon on device home screen</string>
    <string name="options_scramble_pin2">Randomly mix keypad digits</string>
    <string name="options_scramble_pin">Scramble PIN screen</string>
    <string name="show_deposit_pubs">Deposit</string>
    <string name="show_whirlpool_pubs">Whirlpool</string>
    <string name="show_badbank_pubs">Bad Bank</string>
    <string name="show_swaps_pubs">Swaps</string>
    <string name="show_ricochet_pub">Ricochet</string>
    <string name="show_wallet_account_tech_info">Show wallet account technical info</string>
    <string name="erase_wallet_data">Erase wallet data</string>
    <string name="share">Share</string>
</resources>