<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="txPrefs">

    <com.samourai.wallet.settings.CustomPreference
        android:title="@string/broadcast_transactions"
        android:summary="@string/options_broadcast_on2"
        android:key="broadcastTx"
        app:iconSpaceReserved="false"
        app:allowDividerBelow="true"
        app:allowDividerAbove="true"
        app:isSwitch="true"
        />

    <com.samourai.wallet.settings.CustomPreference
        android:title="@string/options_like_typed_change"
        android:summary="@string/options_like_typed_change2"
        android:key="likeTypedChange"
        app:iconSpaceReserved="false"
        app:allowDividerBelow="true"
        app:allowDividerAbove="true"
        app:isSwitch="true"
        />

    <com.samourai.wallet.settings.CustomPreference
        android:title="@string/options_strictoutputs"
        android:summary="@string/options_strictoutputs2"
        android:key="strictOutputs"
        app:iconSpaceReserved="false"
        app:allowDividerBelow="true"
        app:allowDividerAbove="true"
        app:isSwitch="true"
        />

    <com.samourai.wallet.settings.CustomPreference
        android:title="@string/options_rbf0"
        android:summary="@string/options_rbf0_2"
        android:key="rbf"
        app:iconSpaceReserved="false"
        app:allowDividerBelow="true"
        app:allowDividerAbove="true"
        app:isSwitch="true"
        />
</PreferenceScreen>
